@@ -9,7 +9,6 @@ import com.suse.salt.netapi.results.Result;
 import com.suse.salt.netapi.results.Return;
 
 import java.lang.reflect.Type;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -54,7 +53,7 @@ public class WheelCall<R> extends AbstractCall<R> {
      */
     public CompletionStage<WheelAsyncResult<R>> callAsync(final SaltClient client, AuthMethod auth) {
         return client.call(
-                this, Client.WHEEL_ASYNC, Optional.empty(), Collections.emptyMap(),
+                this, Client.WHEEL_ASYNC, Optional.empty(), Map.of(),
                 new TypeToken<Return<List<WheelAsyncResult<R>>>>(){}, auth)
                 .thenApply(wrapper -> {
                     WheelAsyncResult<R> result = wrapper.getResult().get(0);
@@ -80,7 +79,7 @@ public class WheelCall<R> extends AbstractCall<R> {
 
         @SuppressWarnings("unchecked")
         CompletionStage<WheelResult<Result<R>>> wheelResultCompletionStage =
-                client.call(this, Client.WHEEL, Optional.empty(), Collections.emptyMap(),
+                client.call(this, Client.WHEEL, Optional.empty(), Map.of(),
                         (TypeToken<Return<List<WheelResult<Result<R>>>>>)
                                 TypeToken.get(wrapperType), auth)
                         .thenApply(wrapper -> wrapper.getResult().get(0));
